<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/img_home"
            android:title="@string/accueil"
            />

        <item
            android:id="@+id/nav_my_demandes"
            android:icon="@drawable/img_ticket"
            android:title="@string/mes_demandes"
            />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profil"
            android:title="@string/mon_profil"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/img_back"
            android:title="@string/deconnexion"
            android:iconTint="@color/red"
            />

    </group>

</menu>