<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/black"
    tools:context=".Admin.adminLogin">

    <FrameLayout
        android:id="@+id/header_frame"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_services"
            android:scaleType="centerCrop"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_fade_gradient"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium"
        android:paddingVertical="@dimen/margin_large"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Espace Admin"
            android:gravity="center"
            android:textColor="@color/blue"
            android:fontFamily="@font/playfair"
            android:textStyle="bold"
            android:textSize="@dimen/txt_large"
            android:layout_marginBottom="@dimen/margin_large"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue_a_nouveau"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/cairo"
            android:textSize="@dimen/txt_small"
            android:layout_marginBottom="@dimen/margin_large"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adress e-mail"
            android:paddingHorizontal="@dimen/margin_small"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/margin_large"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_admin_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_border_radius_blue"
            android:hint="Entrer votre adress email"
            android:textSize="@dimen/txt_small"
            android:textColor="@color/blue"
            android:paddingHorizontal="@dimen/margin_medium"
            android:fontFamily="@font/cairo"
            android:textColorHint="@color/hintGray"
            android:layout_marginVertical="@dimen/margin_small"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe"
            android:paddingHorizontal="@dimen/margin_small"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            android:fontFamily="@font/cairo"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue"
            android:layout_marginTop="@dimen/margin_small"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_admin_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_border_radius_blue"
                android:hint="@string/entrer_mot_passe"
                android:inputType="textPassword"
                android:textColor="@color/blue"
                android:fontFamily="@font/cairo"
                android:textColorHint="@color/hintGray"
                android:textSize="@dimen/txt_small"
                android:maxLines="1"
                android:imeOptions="actionDone"
            android:layout_marginBottom="@dimen/margin_large"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_admin_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cornerRadius="@dimen/corner1"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/connecter"
            android:textSize="@dimen/txt_medium"
            android:fontFamily="@font/cairo"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
